[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/NNSOM/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/NNSOM"]

[project]
name = "NNSOM"
version = "1.7.8"
description = "A SOM package"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Dr. Martin Hagan" },
  { name = "Dr. Amir Jafari" },
  { name = "Lakshmi Sravya Chalapati" },
  { name = "Ei Tanaka" },

]
maintainers = [
  { name = "Dr. Amir Jafari", email = "amir.h.jafari@okstate.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",  # Update this if the project is more stable
    "Intended Audience :: Science/Research",  # More specific audience
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

keywords = ["SOM", "Neural Network", "Machine Learning", "Unsupervised Learning", "Clustering"]

[project.urls]
Repository = "https://github.com/amir-jafari/SOM"
Issues = "https://github.com/amir-jafari/SOM/issues"
Documenation="https://amir-jafari.github.io/SOM/"