[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/NNSOM/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/NNSOM"]

[project]
name = "NNSOM"
version = "1.8.1"
description = "A SOM package"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Dr. Martin Hagan" },
  { name = "Dr. Amir Jafari"},
  { name = "Lakshmi Sravya Chalapati" },
  { name = "Ei Tanaka" },

]

keywords = ["SOM", "Neural Network", "Machine Learning", "Unsupervised Learning", "Clustering"]

[project.urls]
Repository = "https://github.com/amir-jafari/SOM"
Issues = "https://github.com/amir-jafari/SOM/issues"
Documenation="https://amir-jafari.github.io/SOM/"