[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/NNSOM/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/NNSOM"]

[project]
name = "NNSOM"
version = "1.8.2"
description = "A SOM package"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Dr. Martin Hagan" },
  { name = "Dr. Amir Jafari"},
  { name = "Lakshmi Sravya Chalapati" },
  { name = "Ei Tanaka" },

]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
]

keywords = ["SOM", "Neural Network", "Machine Learning", "Unsupervised Learning", "Clustering"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-design>=0.5",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.23",
    "nbsphinx>=0.9",
    "nbsphinx-link>=1.3",
    "ipykernel>=6.0",
]

[project.urls]
Repository = "https://github.com/amir-jafari/SOM"
Issues = "https://github.com/amir-jafari/SOM/issues"
Documenation="https://amir-jafari.github.io/SOM/"