[metadata]
name = NNSOM
version = 0.0.1
author = Dr.Hagan, Amir Jafari, Lakshmi Sravya Chalapati, Ei Tanaka
author_email = amir.h.jafari@okstate.edu
description = Self Organizing Maps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = NNSOM
packages = find:
python_requires = >=3.6

[options.packages.find]
where = NNSOM